# Sandbox1

TestCpp/: readme.md  sl_CreateCppPrj.sh  sw_CreateCppPrj.bat
TestCpp/Test0/: CMakeLists.txt  README.md  sw_remove_build.bat
TestCpp/Test0/include/: main.h
TestCpp/TestMoveSem/: CMakeLists.txt  README.md
TestCpp/TestMoveSem/src/: main.cpp
TestCpp/TestStandContainers/: CMakeLists.txt  README.md
TestCpp/TestStandContainers/src/: main.cpp
TestCpp/TestTemplates/: CMakeLists.txt  README.md  sl_OpenPrj.sh  sw_OpenPrj.bat
TestCpp/TestTemplates/include/: MultiTimer.hpp  main.hpp
TestCpp/TestTemplates/src/: MultiTimer.cpp  main.cpp
TestCpp/test6/: CMakeLists.txt  README.md
TestCpp/test6/include/: main.h
TestCpp/test6/src/: main.cpp
TestCpp/testdir/: CMakeLists.txt  test.cpp
